# hydra-sweeper-explicit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  msg.txt  pr_body_concurrent.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yaml  test.yaml
src/hydra_plugins/hydra_sweeper_explicit/: __init__.py  _sweeper.py  searchpath.py
src/hydra_plugins/hydra_sweeper_explicit/conf/hydra/sweeper/: explicit.yaml
src/hydra_sweeper_explicit/: _searchpath.py
src/hydra_sweeper_explicit/conf/hydra/sweeper/: explicit.yaml
tests/: conftest.py  test_sweeper.py
