[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "hydra-sweeper-explicit"
description = "Hydra sweeper for explicit parameter combinations without Cartesian product"
readme = "README.md"
keywords = [
  "hydra",
  "hyperparameter",
  "machine-learning",
  "sweeper",
]
license = "MIT"
maintainers = [
  { name = "Marius Lange" },
]
authors = [
  { name = "Marius Lange" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = [ "version" ]
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

optional-dependencies.dev = [
  "pre-commit",
]
optional-dependencies.test = [
  "coverage>=7.10",
  "pytest>=8",
  "pytest-cov",     # for VS Code's coverage functionality
]
urls.Documentation = "https://github.com/quadbio/hydra-sweeper-explicit#readme"
urls.Issues = "https://github.com/quadbio/hydra-sweeper-explicit/issues"
urls.Source = "https://github.com/quadbio/hydra-sweeper-explicit"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [ "src/hydra_plugins" ]

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.hatch-test]
features = [ "dev", "test" ]

# Test both supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.12", "3.13" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.13" ]

# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
[tool.hatch.envs.hatch-test.overrides]
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

# ---- Ruff ----

[tool.ruff]
line-length = 120

format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  # Errors from function calls in argument defaults
  "B008",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public package
  "D104",
  # Missing docstring in __init__
  "D107",
  # first line should be in imperative mood
  "D401",
  # line too long -> we accept long comment lines
  "E501",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are fine
  "E731",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."tests/*" = [ "D" ]
# ---- Pytest ----

lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib",
]

# ---- Coverage ----

[tool.coverage.run]
source = [ "hydra_plugins.hydra_sweeper_explicit" ]
patch = [ "subprocess" ]
omit = [ "**/test_*.py" ]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
